css/styles.css
h1 {
  color: red;
  font-family: 'Alegreya', serif;
  font-size: 50px;
  text-align: center;
}

h2 {
  color: red;
  font-family: 'Alegreya', serif;
  font-size: 25px;
}

body {
  font-family: 'Work Sans', sans-serif;
  font-weight: lighter;
}

p {
  font-family: 'Work Sans', sans-serif;
  line-height: 1.3em;
}

p.rating {
  font-weight: bold;
  font-size: 18px;
}

p.subhead {
  width: 100%;
  font-size: 20px;
  text-align: center;
}


.movie-title {
  font-style: italic;
}

.inline-rating {
  font-style: italic;
}

.gallery {
  display: grid;
  padding-top: 5%;
  padding-left: 10%;
  padding-right: 10%;
  grid-column-gap: 100px;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
}

img.gallery {
  max-height: 200px;
  padding-top: 5%;
  padding-left: 0px;
  padding-bottom: 1%;
}

.item {
  width = 100%;
  font-size: 13px;
  padding-bottom: 15%;
}

